# RS1Group31

./: 41068_ignition_bringup  README.md  Welcome
src/dummy_drone/: CMakeLists.txt  package.xml
src/dummy_drone/src/: dummy_drone_controller.cpp
trail_patrol_drone/: .gitignore  CMakeLists.txt  README.md  avoidance.md  commands.txt  package.xml
trail_patrol_drone/config/: robot_localization.yaml
trail_patrol_drone/launch/: trail_patrol_drone.launch.py  trail_patrol_drone_obstacle.launch.py  trail_patrol_drone_wall_obstacle.launch.py  trail_patrol_navigation.launch.py
trail_patrol_drone/msg/: ObstacleAvoidanceRequest.msg
trail_patrol_drone/src/: mission.cpp  navigation.cpp
trail_patrol_drone/trails/: trail1.txt
trail_patrol_drone/urdf/: husky.gazebo.xacro  husky.urdf.xacro  wheel.urdf.xacro
trail_patrol_drone/urdf_drone/: parrot.gazebo.xacro  parrot.urdf.xacro
trail_patrol_drone/worlds/: large_demo_wall_obstacle.sdf  large_demo_with_obstacle.sdf
trail_patrol_drone_integrate_UI/: CMakeLists.txt  DOXYGEN_GUIDE.md  Doxyfile  command.txt  mission_statistics_20251112_121517.txt  package.xml  waypoint.txt
trail_patrol_drone_integrate_UI/config/: 41068.rviz  gazebo_bridge.yaml  robot_localization.yaml  slam_params.yaml
trail_patrol_drone_integrate_UI/docs/html/: annotated.html  classMission-members.html  classMission.html  classMission__coll__graph.map  classMission__coll__graph.md5  classMission__inherit__graph.map  classMission__inherit__graph.md5  classMission_a0e0f7be47badf79e782b78743acffc6f_cgraph.map  classMission_a0e0f7be47badf79e782b78743acffc6f_cgraph.md5  classMission_a0e0f7be47badf79e782b78743acffc6f_icgraph.map  classMission_a0e0f7be47badf79e782b78743acffc6f_icgraph.md5  classMission_a20726c8a069901a1921acb6f11102e13_cgraph.map  classMission_a20726c8a069901a1921acb6f11102e13_cgraph.md5  classMission_a20726c8a069901a1921acb6f11102e13_icgraph.map  classMission_a20726c8a069901a1921acb6f11102e13_icgraph.md5  classMission_a23a2e08ce31a98abce886bb968b727e9_cgraph.map  classMission_a23a2e08ce31a98abce886bb968b727e9_cgraph.md5  classMission_a23a2e08ce31a98abce886bb968b727e9_icgraph.map  classMission_a23a2e08ce31a98abce886bb968b727e9_icgraph.md5  classMission_a2d29b8445e75710276f496699e0c56a1_cgraph.map  classMission_a2d29b8445e75710276f496699e0c56a1_cgraph.md5  classMission_a2d29b8445e75710276f496699e0c56a1_icgraph.map  classMission_a2d29b8445e75710276f496699e0c56a1_icgraph.md5  classMission_a31a901ccbee43aafd9fbc3d60029c474_cgraph.map  classMission_a31a901ccbee43aafd9fbc3d60029c474_cgraph.md5  classMission_a3485c6602a5635605b6fc159a8c46a11_icgraph.map  classMission_a3485c6602a5635605b6fc159a8c46a11_icgraph.md5  classMission_a38d0fb31a61d00a2bce0a4ec4de6ed0d_icgraph.map  classMission_a38d0fb31a61d00a2bce0a4ec4de6ed0d_icgraph.md5  classMission_a430fb6a9d5e6bbac8a452549ad1d3db6_cgraph.map  classMission_a430fb6a9d5e6bbac8a452549ad1d3db6_cgraph.md5  classMission_a430fb6a9d5e6bbac8a452549ad1d3db6_icgraph.map  classMission_a430fb6a9d5e6bbac8a452549ad1d3db6_icgraph.md5  classMission_a4c51da57f38b8c2922d5dc15250f525b_icgraph.map  classMission_a4c51da57f38b8c2922d5dc15250f525b_icgraph.md5  classMission_a6531a2b9cc98d99e60b2fd3095b7dfb9_icgraph.map  classMission_a6531a2b9cc98d99e60b2fd3095b7dfb9_icgraph.md5  classMission_a77c83440de3e7d90db618f762264c591_icgraph.map  classMission_a77c83440de3e7d90db618f762264c591_icgraph.md5  classMission_a8ff7d050aec65f20d7f7206cd9d0a696_cgraph.map  (+337 more)
trail_patrol_drone_integrate_UI/docs/latex/: annotated.tex  classMission.tex  classMission__coll__graph.md5  classMission__inherit__graph.md5  classMission_a0e0f7be47badf79e782b78743acffc6f_cgraph.md5  classMission_a0e0f7be47badf79e782b78743acffc6f_icgraph.md5  classMission_a20726c8a069901a1921acb6f11102e13_cgraph.md5  classMission_a20726c8a069901a1921acb6f11102e13_icgraph.md5  classMission_a23a2e08ce31a98abce886bb968b727e9_cgraph.md5  classMission_a23a2e08ce31a98abce886bb968b727e9_icgraph.md5  classMission_a2d29b8445e75710276f496699e0c56a1_cgraph.md5  classMission_a2d29b8445e75710276f496699e0c56a1_icgraph.md5  classMission_a31a901ccbee43aafd9fbc3d60029c474_cgraph.md5  classMission_a3485c6602a5635605b6fc159a8c46a11_icgraph.md5  classMission_a38d0fb31a61d00a2bce0a4ec4de6ed0d_icgraph.md5  classMission_a430fb6a9d5e6bbac8a452549ad1d3db6_cgraph.md5  classMission_a430fb6a9d5e6bbac8a452549ad1d3db6_icgraph.md5  classMission_a4c51da57f38b8c2922d5dc15250f525b_icgraph.md5  classMission_a6531a2b9cc98d99e60b2fd3095b7dfb9_icgraph.md5  classMission_a77c83440de3e7d90db618f762264c591_icgraph.md5  classMission_a8ff7d050aec65f20d7f7206cd9d0a696_cgraph.md5  classMission_a8ff7d050aec65f20d7f7206cd9d0a696_icgraph.md5  classMission_a9c36210798552a6d5ec5ddff2c9b2171_cgraph.md5  classMission_a9c36210798552a6d5ec5ddff2c9b2171_icgraph.md5  classMission_aa5a6ff4fc779338ab01b8f6dd470f4df_cgraph.md5  classMission_ac5ae94957c550eb05b4467a9b17e531b_icgraph.md5  classMission_aca35dd36d34d25c5f3edddff034725b8_cgraph.md5  classMission_aca35dd36d34d25c5f3edddff034725b8_icgraph.md5  classMission_acbd4ab61e1d733fc7e3ff172153a26ea_cgraph.md5  classMission_acbd4ab61e1d733fc7e3ff172153a26ea_icgraph.md5  classMission_acefbdc40553462bdf2c31361bd3f7be9_icgraph.md5  classMission_acfaf9034e9ad3ad91817bbc9f942764b_cgraph.md5  classMission_acfaf9034e9ad3ad91817bbc9f942764b_icgraph.md5  classMission_aec7d21c4224e4e08c04aa1ef133e0b5f_cgraph.md5  classMission_aec7d21c4224e4e08c04aa1ef133e0b5f_icgraph.md5  classMission_af3de1d159a2ca9069d0585b7a1a65147_cgraph.md5  classMission_af3de1d159a2ca9069d0585b7a1a65147_icgraph.md5  classMission_af950d936bc73b3491d8cbe6af3743c26_icgraph.md5  classMission_afc97417b1e770007a7442b5b8626ae9f_icgraph.md5  (+135 more)
trail_patrol_drone_integrate_UI/launch/: 41068_ignition_drone.launch.py  41068_navigation.launch.py  trail_patrol_drone_mission.launch.py
trail_patrol_drone_integrate_UI/src/: drone_control_panel.cpp  drone_control_panel.hpp  drone_ui_navigation_bridge.cpp  mission.cpp  navigation.cpp  plugin_description.xml
trail_patrol_drone_integrate_UI/urdf_drone/: parrot.gazebo.xacro  parrot.urdf.xacro
(+157 files in other folders)
