<?xml version="1.0"?>
<package format="3">
  <name>dummy_drone</name>
  <version>0.0.0</version>
  <description>Dummy drone controller</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
</package>
